<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tasks"
            android:title="@string/menu_tasks" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout"
                android:onClick="menuLogout"/>

        <item
            android:id="@+id/nav_background"
            android:title="@string/menu_background"
            android:onClick="menuBackground"/>

    </group>
</menu>
