<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tasks.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.tasks.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/tasks_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.tasks.ui.share.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_fragment" />
</navigation>